[bdist_wheel]
universal = 1

[metadata]
name = wordle
version = attr: primes.__version__
description = wordle solver
long_description = file:README.md
license = MIT
author = shidocchi
author_email = shidocchi@gmail.com
url = https://github.com/shidocchi/wordle
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
py_modules = wordle
